src/test/ui/nll/ty-outlives/impl-trait-captures.stderr
error[E0700]: hidden type for `Opaque(DefId(0:13 ~ impl_trait_captures[1afc]::foo::{opaque#0}), ['static, T, 'a/0])` captures lifetime that does not appear in bounds
  --> $DIR/impl-trait-captures.rs:11:5
   |
LL | fn foo<'a, T>(x: &T) -> impl Foo<'a> {
   |                  -- hidden type `&ReFree(BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_)), DefId(0:8 ~ impl_trait_captures[1afc]::foo)) T` captures the anonymous lifetime defined here
LL |     x
   |     ^
   |
help: to declare that `Opaque(DefId(0:13 ~ impl_trait_captures[1afc]::foo::{opaque#0}), ['a/0, T, 'a/2])` captures `ReFree(BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_)), DefId(0:8 ~ impl_trait_captures[1afc]::foo))`, you can add an explicit `ReFree(BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_)), DefId(0:8 ~ impl_trait_captures[1afc]::foo))` lifetime bound
   |
LL | fn foo<'a, T>(x: &T) -> impl Foo<'a> + ReFree(BrNamed(DefId(0:12 ~ impl_trait_captures[1afc]::foo::'_)), DefId(0:8 ~ impl_trait_captures[1afc]::foo)) {
   |                                      ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
